--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,66 @@
-fastapi
-uvicorn
-scikit-learn
-PyPDF2
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.7.0
+certifi==2025.8.3
+click==8.3.1
+contourpy==1.3.1
+cycler==0.12.1
+distro==1.9.0
+fastapi==0.131.0
+filelock==3.24.3
+fonttools==4.57.0
+fsspec==2026.2.0
+h11==0.14.0
+hf-xet==1.2.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface_hub==1.4.1
+idna==3.10
+Jinja2==3.1.6
+jiter==0.8.2
+joblib==1.5.3
+kiwisolver==1.4.8
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.1
+mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.6.1
+numpy==2.2.4
+openai==1.57.4
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+pydantic==2.10.3
+pydantic_core==2.27.1
+Pygments==2.19.2
+pyparsing==3.2.3
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-multipart==0.0.22
+pytz==2025.2
+PyYAML==6.0.3
+regex==2026.2.19
+rich==14.3.3
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
+seaborn==0.13.2
+sentence-transformers==5.2.3
+setuptools==82.0.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.52.1
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+torch==2.10.0
+tqdm==4.67.1
+transformers==5.2.0
+typer==0.24.1
+typer-slim==0.24.0
+typing-inspection==0.4.2
+typing_extensions==4.12.2
+tzdata==2025.2
+uvicorn==0.41.0
